# S3_ImageAnnotator

./: .gitignore  README.md  app.py  main.py  objectSegmentation.py  pyproject.toml  requirements.txt
static/: script.js  style.css
templates/: index.html
